<resources>
    <string name="app_name">Gridview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="share_text">share_text</string>
    <string name="share_image">share_image</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //Menu items flotign Button
    <string name="items1">Pizarra</string>
    <string name="items2">Compartir</string>
    <string name="items3">Buscar</string>
    <string name="items4">Grabar</string>
    <string name="items5">Tools</string>

    //Menu toolbar
    <string name="itemsTool1">Imagen</string>
    <string name="itemsTool2">Más información</string>
    <string name="itemsTool3">Señalización</string>
    <string name="itemsTool4">Vídeo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment image</string>


</resources>
