<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context="com.sinapsissoft.gridview.ImageActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="@android:color/transparent"
        android:transitionName="text_compartida"
        tools:ignore="UnusedAttribute" />
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="16dp">

        <include layout="@layout/toolbar"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_icon_size"
                    android:text="title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:transitionName="@string/share_text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/btn_imag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_menu_gallery"
                        android:transitionName="@string/share_image"
                        tools:ignore="ContentDescription,UnusedAttribute"></ImageView>


                </RelativeLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/content_view_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundTrans2"
                android:foregroundGravity="center"
                android:visibility="gone"
                android:padding="@dimen/fab_margin">

            </FrameLayout>

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/contentFloating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="visible"
                app:fab_addButtonColorNormal="@color/colorAccent"
                app:fab_addButtonColorPressed="@color/colorPrimaryDark"
                app:fab_addButtonPlusIconColor="@color/colorPrimary_light"
                app:fab_labelStyle="@style/menu_labels_style"
                app:fab_labelsPosition="left"
                tools:ignore="ObsoleteLayoutParam,RelativeOverlap">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_blackboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_border"
                    app:fab_colorNormal="@color/colorPrimaryDark"
                    app:fab_colorPressed="@color/colorAccent"
                    app:fab_size="mini"
                    app:fab_title="@string/items1"

                    />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu_share"
                    app:fab_colorNormal="@color/colorPrimaryDark"
                    app:fab_colorPressed="@color/colorAccent"
                    app:fab_size="mini"
                    app:fab_title="@string/items2"

                    />


            </com.getbase.floatingactionbutton.FloatingActionsMenu>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
